seaqt/QtDesigner/gen_abstractlanguage.h

class QDesignerFormWindowInterface;
class QDesignerLanguageExtension;
class QDesignerResourceBrowserInterface;
class QDialog;
class QObject;
class QWidget;
typedef struct QDesignerFormWindowInterface QDesignerFormWindowInterface;
typedef struct QDesignerLanguageExtension QDesignerLanguageExtension;
typedef struct QDesignerResourceBrowserInterface QDesignerResourceBrowserInterface;
typedef struct QDialog QDialog;
typedef struct QObject QObject;
typedef struct QWidget QWidget;
struct seaqt_string QDesignerLanguageExtension_name(const QDesignerLanguageExtension* self);
QDialog* QDesignerLanguageExtension_createFormWindowSettingsDialog(QDesignerLanguageExtension* self, QDesignerFormWindowInterface* formWindow, QWidget* parentWidget);
QDesignerResourceBrowserInterface* QDesignerLanguageExtension_createResourceBrowser(QDesignerLanguageExtension* self, QWidget* parentWidget);
bool QDesignerLanguageExtension_isLanguageResource(const QDesignerLanguageExtension* self, struct seaqt_string path);
struct seaqt_string QDesignerLanguageExtension_classNameOf(const QDesignerLanguageExtension* self, QObject* object);
bool QDesignerLanguageExtension_signalMatchesSlot(const QDesignerLanguageExtension* self, struct seaqt_string signal, struct seaqt_string slot);
struct seaqt_string QDesignerLanguageExtension_widgetBoxContents(const QDesignerLanguageExtension* self);
struct seaqt_string QDesignerLanguageExtension_uiExtension(const QDesignerLanguageExtension* self);
void QDesignerLanguageExtension_delete(QDesignerLanguageExtension* self);